# Basic-Term-Model-Rust-lifelibBasicTermSM

./: .gitignore  Cargo.toml  README.md
notebooks/: analysis.py  pyproject.toml
spreadsheets/: basic_term_model.ods
src/: assumptions.rs  main.rs  model_points.rs  mp_gen.rs  projections.rs
src/assumptions/: assumption.rs  assumption_scenario.rs  assumptions.ods  helpers.rs
src/mp_gen/: pricing_mp_gen.rs  s_mp_gen.rs
src/projections/: helpers.rs  projection_mp.rs  projection_multi_runs.rs  projection_single_run.rs
src/projections/projection_mp/: asl_se_model.rs  s.rs  s_model.rs  se_model.rs  structs.rs
