[package]
name = "act"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1" }
polars = { version = "0.49.1", features = ["describe", "lazy", "ndarray", "parquet"] }
ndarray-rand = { version = "0.15.0" }
rayon = "1.10.0"
spreadsheet-ods = "0.25.0"
uuid = "1.17.0"
serde_json = "1.0.140"
